refactor: add registerConverter method